binning values object values that have low unique count

--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -784,13 +784,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "TyDuwNpfJhjo",
-        "outputId": "95548afb-34a2-49a8-c5c4-0231b851e961"
+        "outputId": "2df102c1-008d-440c-d308-02769551b86d"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "T3       27037\n",
@@ -805,21 +809,20 @@
               "Name: APPLICATION_TYPE, dtype: int64"
             ]
           },
-          "execution_count": 6,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 10
         }
       ],
       "source": [
-        "# Determine which values to replace if counts are less than ...?\n",
-        "#  YOUR CODE GOES HERE\n",
+        "# Determine which values to replace if counts are less than 500?\n",
+        "replace_application = list(application_type_counts[application_type_counts < 500].index)\n",
         "\n",
         "# Replace in dataframe\n",
         "for app in replace_application:\n",
-        "    application_df.APPLICATION_TYPE = application_df.APPLICATION_TYPE.replace(app,\"Other\")\n",
+        "    new_application_df.APPLICATION_TYPE = new_application_df.APPLICATION_TYPE.replace(app,\"Other\")\n",
         "    \n",
         "# Check to make sure binning was successful\n",
-        "application_df.APPLICATION_TYPE.value_counts()"
+        "new_application_df.APPLICATION_TYPE.value_counts()"
       ]
     },
     {
