--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -1739,14 +1739,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
       "metadata": {
         "id": "LgmLB61NJhju"
       },
       "outputs": [],
       "source": [
         "# Compile the model\n",
-        "#  YOUR CODE GOES HERE"
+        "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
       ]
     },
     {
