--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -1751,23 +1751,247 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 84,
       "metadata": {
-        "id": "9YAyi2HNJhju"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9YAyi2HNJhju",
+        "outputId": "ed737f85-4e46-4583-9fc0-54793543a8d6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/100\n",
+            "804/804 [==============================] - 4s 3ms/step - loss: 68943.1328 - accuracy: 0.5089\n",
+            "Epoch 2/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 80037.2344 - accuracy: 0.4931\n",
+            "Epoch 3/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 37633.7305 - accuracy: 0.5101\n",
+            "Epoch 4/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 56715.3438 - accuracy: 0.4946\n",
+            "Epoch 5/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 6666.0405 - accuracy: 0.5054\n",
+            "Epoch 6/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 36567.1641 - accuracy: 0.4865\n",
+            "Epoch 7/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 39233.2695 - accuracy: 0.5138\n",
+            "Epoch 8/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 13790.7100 - accuracy: 0.4937\n",
+            "Epoch 9/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 18604.8223 - accuracy: 0.5196\n",
+            "Epoch 10/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 14838.7607 - accuracy: 0.5025\n",
+            "Epoch 11/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 6828.1021 - accuracy: 0.5180\n",
+            "Epoch 12/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 13637.3379 - accuracy: 0.5116\n",
+            "Epoch 13/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 5898.0913 - accuracy: 0.5168\n",
+            "Epoch 14/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 8743.3672 - accuracy: 0.5171\n",
+            "Epoch 15/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 2429.0981 - accuracy: 0.5252\n",
+            "Epoch 16/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 7949.2061 - accuracy: 0.5114\n",
+            "Epoch 17/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 785.8501 - accuracy: 0.5326\n",
+            "Epoch 18/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 3314.2405 - accuracy: 0.5224\n",
+            "Epoch 19/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 2542.4897 - accuracy: 0.5168\n",
+            "Epoch 20/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 203.3320 - accuracy: 0.5272\n",
+            "Epoch 21/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 191.0572 - accuracy: 0.5308\n",
+            "Epoch 22/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6432 - accuracy: 0.6077\n",
+            "Epoch 23/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6339 - accuracy: 0.6448\n",
+            "Epoch 24/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6324 - accuracy: 0.6459\n",
+            "Epoch 25/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6320 - accuracy: 0.6467\n",
+            "Epoch 26/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6318 - accuracy: 0.6473\n",
+            "Epoch 27/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6319 - accuracy: 0.6467\n",
+            "Epoch 28/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6316 - accuracy: 0.6474\n",
+            "Epoch 29/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6317 - accuracy: 0.6483\n",
+            "Epoch 30/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6319 - accuracy: 0.6472\n",
+            "Epoch 31/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6326 - accuracy: 0.6469\n",
+            "Epoch 32/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6315 - accuracy: 0.6505\n",
+            "Epoch 33/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6309 - accuracy: 0.6518\n",
+            "Epoch 34/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6298 - accuracy: 0.6570\n",
+            "Epoch 35/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6332 - accuracy: 0.6513\n",
+            "Epoch 36/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6889 - accuracy: 0.5299\n",
+            "Epoch 37/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 38/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 39/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 40/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 41/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 42/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 43/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 44/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 45/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 46/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 47/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 48/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 49/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 50/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 51/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 52/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 53/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 54/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 55/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 56/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 57/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 58/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6913 - accuracy: 0.5324\n",
+            "Epoch 59/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 60/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 61/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 62/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 63/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 64/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 65/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6910 - accuracy: 0.5324\n",
+            "Epoch 66/100\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 67/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 68/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 69/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 70/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 71/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6913 - accuracy: 0.5324\n",
+            "Epoch 72/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 73/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 74/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 75/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 76/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 77/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 78/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 79/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 80/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 81/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 82/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 83/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 84/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 85/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 86/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 87/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 88/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 89/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 90/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 91/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 92/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 93/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 94/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 95/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 96/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 97/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 98/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6911 - accuracy: 0.5324\n",
+            "Epoch 99/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n",
+            "Epoch 100/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.6912 - accuracy: 0.5324\n"
+          ]
+        }
+      ],
       "source": [
         "# Train the model\n",
-        "#  YOUR CODE GOES HERE"
+        "fit_model = nn.fit(X_train,y_train,epochs=100)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 85,
       "metadata": {
-        "id": "QvtZj0lhJhju"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QvtZj0lhJhju",
+        "outputId": "374ffd93-586e-4fea-c1f2-8f7056c1fe22"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "268/268 - 0s - loss: 0.7350 - accuracy: 0.7037 - 487ms/epoch - 2ms/step\n",
+            "Loss: 0.7350100874900818, Accuracy: 0.7036734819412231\n"
+          ]
+        }
+      ],
       "source": [
         "# Evaluate the model using the test data\n",
         "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
