check how many features we have in the X-Train_scaled.

--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -814,7 +814,7 @@
         }
       ],
       "source": [
-        "# Determine which values to replace if counts are less than 500?\n",
+        "# Determine which values to replace if counts are less than 500\n",
         "replace_application = list(application_type_counts[application_type_counts < 500].index)\n",
         "\n",
         "# Replace in dataframe\n",
@@ -906,7 +906,7 @@
         }
       ],
       "source": [
-        "# Determine which values to replace if counts are less than 2500?\n",
+        "# Determine which values to replace if counts are less than 2500\n",
         "replace_class = list(classification_counts[classification_counts < 1500].index)\n",
         "\n",
         "# Replace in dataframe\n",
@@ -1675,28 +1675,26 @@
     {
       "cell_type": "code",
       "source": [
-        "X_train_scaled"
+        "len(X_train_scaled[0])"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 168
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "HGkCrW2Luqv5",
-        "outputId": "395e099b-2b55-4940-fd28-41d130a20a86"
+        "id": "iPci4pM205dS",
+        "outputId": "935f3865-c6cc-4356-eabd-c79f2bb9bb9e"
       },
-      "execution_count": 111,
+      "execution_count": 113,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-111-54e347bb88e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX_train_scaled\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'count'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "43"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
         }
       ]
     },
