split the preprocessed data and apply the StandardScaler()

--- a/AlphabetSoupCharity_Optimzation.ipynb
+++ b/AlphabetSoupCharity_Optimzation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AlphabetSoupCharity_Optimzation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPF/HoEMB+oO6h2yafPkUqT",
+      "authorship_tag": "ABX9TyOujQx3zqKjbG+fRbc4fzYD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1767,23 +1767,49 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Split our preprocessed data into our features and target arrays\n",
+        "y = new_application_df[\"IS_SUCCESSFUL\"].values\n",
+        "X = new_application_df.drop([\"IS_SUCCESSFUL\"],1)\n",
+        "\n",
+        "# Split the preprocessed data into a training and testing dataset\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)"
       ],
       "metadata": {
-        "id": "rZfvGagD0OTG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rZfvGagD0OTG",
+        "outputId": "9b07cfbf-11af-4fdf-b9ae-f132ca46a7e3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Create a StandardScaler instances\n",
+        "scaler = StandardScaler()\n",
+        "\n",
+        "# Fit the StandardScaler\n",
+        "X_scaler = scaler.fit(X_train)\n",
+        "\n",
+        "# Scale the data\n",
+        "X_train_scaled = X_scaler.transform(X_train)\n",
+        "X_test_scaled = X_scaler.transform(X_test)"
       ],
       "metadata": {
         "id": "VQh1kKow0OVL"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
